--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,6 +2,8 @@
     {{!-- HEADRE --}}
     {{>head}}
     <body>
+        {{!-- NAVBAR --}}
+        {{>navbar}}
         {{!-- BODY --}}
         <div class="container">
             {{{body}}}
