--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -6,5 +6,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
-  <title>APP | Dima</title>
+  <link rel="sortcut icon" type="image/x-icone" href="/favicon.svg">
+  <link rel="stylesheet" href="./index.css">
+  <title>{{title}}</title></title>
 </head>
