--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <div class="w-50 mx-auto">
     <p class="fs-1">Login</p>
     {{#if loginError}}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    <div class="alert alert-danger alert-dismissible fade show animate" role="alert">
       <strong>Error!</strong> {{loginError}}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
