--- a/public/index.css
+++ b/public/index.css
@@ -2,7 +2,41 @@
     background-color: #000;
 }
 
+.avatar {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
 
+.avatar p {
+    padding: 0;
+    margin: 0;
+}
+
+.wrap {
+    height: 200px;
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+                    
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+                    
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
 
 
 
